# enterprise-ai-operating-framework

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  langgraph.dev.json  langgraph.json  pyproject.toml
agents/act_agent/: graph.py  nodes.py  prompts.py  state.py  tools.py
agents/govern_agent/: graph.py  nodes.py  prompts.py  state.py  tools.py
agents/insight_agent/: graph.py  handoff_tools.py  nodes.py  prompts.py  state.py  tools.py
agents/insight_agent/semantic_sql_agent/: graph.py  models.py  prompts.py  tools.py
agents/learn_agent/: graph.py  nodes.py  prompts.py  state.py  tools.py
agents/measure_agent/: graph.py  nodes.py  prompts.py  state.py  tools.py
agents/orchestrator_agent/: graph.py  prompts.py  state.py
agents/strategy_agent/: graph.py  nodes.py  prompts.py  state.py  tools.py
evals/: routing_eval.py
libs/connectors/: __init__.py  base.py  factory.py  mysql.py  snowflake.py  sqlite.py
libs/governance/: middleware.py  policies.py
libs/knowledge_graph/: __init__.py  models.py  reader.py  store.py  writer.py
libs/security/: __init__.py  auth.py  feature_flags.py
tests/: conftest.py
tests/agents/learn_agent/: test_tools.py
tests/agents/orchestrator_agent/: test_routing.py
tests/agents/strategy_agent/: test_tools.py
tests/libs/: test_connectors.py  test_feature_flags.py  test_governance.py  test_knowledge_graph.py
